# msa-heuristic-search

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plots_generation.ipynb  process_test_data.py
data/: test_config.txt
data/matrices/: BLOSUM45.txt  PAM250.txt
include/: anytime_astar.h  astar.h  common.h  heuristic.h  heuristic_algorithms.h  idastar.h  input.h  node.h  peastar.h  progressive_alignment.h  utils.h
src/: anytime_astar.cpp  astar.cpp  common.cpp  heuristic.cpp  heuristic_algorithms.cpp  idastar.cpp  node.cpp  peastar.cpp  progressive_alignment.cpp  utils.cpp
tests/: test_msa.cpp
